feat: serve masterdata for permissions
