# models/roles.go
@@ -9,12 +9,36 @@ import (
 )
 
 type Scope string
+type Action string
 
 const (
-	Own Scope = "own"
-	Org Scope = "org"
-	All Scope = "all"
+	ScopeAll        Scope = "all"
+	ScopeOrg        Scope = "org"
+	ScopeAssociated Scope = "associated"
+	ScopeOwn        Scope = "own"
 )
+
+const (
+	ActionWrite  Action = "write"
+	ActionCreate Action = "create"
+	ActionRead   Action = "read"
+	ActionUpdate Action = "update"
+	ActionDelete Action = "delete"
+)
+
+var Scopes = []Scope{ScopeAll, ScopeOrg, ScopeAssociated, ScopeOwn}
+
+var Actions = []Action{ActionWrite, ActionCreate, ActionUpdate, ActionDelete, ActionRead}
+
+var Resources = []string{"users", "masterdata", "inventory", "roles", "permissions", "accounts", "transactions"}
+
+func (p *Action) Scan(value interface{}) error {
+	*p = Action(value.(string))
+	return nil
+}
+func (p Action) Value() (driver.Value, error) {
+	return string(p), nil
+}
 
 func (p *Scope) Scan(value interface{}) error {
 	*p = Scope(value.(string))
@@ -39,8 +63,8 @@ type Role struct {
 type Permission struct {
 	gorm.Model `swaggerignore:"true"`
 	Resource   string `gorm:"not null;index:idx_resource;index:idx_res_scope_action,unique,priority:1" validate:"alphanum_,min=3"`
-	Scope      Scope  `gorm:"not null;index:idx_res_scope_action,unique,priority:2" validate:"required,oneof=own org all,alphanum_,min=3"`
-	Action     string `gorm:"not null;index:idx_res_scope_action,unique,priority:3;check:action IN ('read', 'write', 'delete', 'update')" validate:"required,oneof=read write delete update,alphanum_,min=3"`
+	Scope      Scope  `gorm:"not null;index:idx_res_scope_action,unique,priority:2" validate:"required,oneof=own org associated all,alphanum_,min=3"`
+	Action     Action `gorm:"not null;index:idx_res_scope_action,unique,priority:3;check:action IN ('read', 'write', 'delete', 'update', 'create')" validate:"required,oneof=read write delete update create,alphanum_,min=3"`
 
 	Description string
 	Roles       []*Role `gorm:"many2many:role_permissions;"`
@@ -48,10 +72,9 @@ type Permission struct {
 
 // UserOrgRole many to many relation table
 type UserOrgRole struct {
-	gorm.Model `swaggerignore:"true"`
-	OrgID      int `gorm:"not null"`
-	UserID     int `gorm:"not null"`
-	RoleID     int `gorm:"not null"`
+	OrgID  int `gorm:"not null"`
+	UserID int `gorm:"not null"`
+	RoleID int `gorm:"not null"`
 }
 
 // MarshalJSON Json Dump override method
