# rest-api/routes.go
@@ -74,11 +74,17 @@ func NewHandler(settings *settings.Settings, perm_cache *permission_cache.Permis
 	api.Handle("/roles", makeHandler(ctr.CreateRole, WithAuth(true))).Methods("POST")
 	api.Handle("/permissions", makeHandler(ctr.CreatePermission, WithAuth(true))).Methods("POST")
 	api.Handle("/roles/bind-permission", makeHandler(ctr.BindPermissionToRole, WithAuth(true))).Methods("POST")
-
+	api.Handle("/roles/bind-user", makeHandler(ctr.BindRoleToUser, WithAuth(true))).Methods("POST")
 	// Master data
-	api.Handle("/master-data/resources", makeHandler(ctr.GetResources, WithAuth(true))).Methods("GET")
-	api.Handle("/master-data/scopes", makeHandler(ctr.GetScopes, WithAuth(true))).Methods("GET")
-	api.Handle("/master-data/actions", makeHandler(ctr.GetActions, WithAuth(true))).Methods("GET")
+	api.Handle("/master-data/resources",
+		makeHandler(ctr.GetResources, WithAuth(true), WithPermission("masterdata:*:read")),
+	).Methods("GET")
+	api.Handle("/master-data/scopes",
+		makeHandler(ctr.GetScopes, WithAuth(true), WithPermission("masterdata:*:read")),
+	).Methods("GET")
+	api.Handle("/master-data/actions",
+		makeHandler(ctr.GetActions, WithAuth(true), WithPermission("masterdata:*:read")),
+	).Methods("GET")
 
 	// Static file server
 	fileServer := http.FileServer(http.Dir("./profile_pics/"))
